// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`shallow render 1`] = `
<div
  className="flex-100 layout-row layout-wrap layout-align-start-center pointy nav_item"
  onClick={[Function]}
>
  <div
    className="flex-15 layout-row layout-align-center-center nav_icon"
  >
    <i
      className="flex-none fa ICON"
      style={
        Object {
          "background": "-webkit-linear-gradient(-90deg, #333,#fafafa)",
        }
      }
    />
  </div>
  <div
    className="flex layout-row layout-wrap nav_text"
  >
    <h3
      className="flex-none"
    >
      <p
        data-tip="TOOLTIP"
      >
        TEXT
      </p>
    </h3>
    <ReactTooltip
      className="nav_tooltip"
      effect="solid"
      insecure={true}
      resizeHide={true}
      wrapper="div"
    />
  </div>
</div>
`;

exports[`theme is falsy 1`] = `
<div
  className="flex-100 layout-row layout-wrap layout-align-start-center pointy nav_item"
  onClick={[Function]}
>
  <div
    className="flex-15 layout-row layout-align-center-center nav_icon"
  >
    <i
      className="flex-none fa ICON"
      style={
        Object {
          "color": "black",
        }
      }
    />
  </div>
  <div
    className="flex layout-row layout-wrap nav_text"
  >
    <h3
      className="flex-none"
    >
      <p
        data-tip="TOOLTIP"
      >
        TEXT
      </p>
    </h3>
    <ReactTooltip
      className="nav_tooltip"
      effect="solid"
      insecure={true}
      resizeHide={true}
      wrapper="div"
    />
  </div>
</div>
`;
